# llmk-recipes

./: CONTRIBUTING.md  LICENSE  README.md  UPDATES.md  USE_POLICY.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml
.github/workflows/: pytest_cpu_gha_runner.yaml
benchmarks/inference/: README.md
demo_apps/: HelloLlamaCloud.ipynb  HelloLlmkLocal.ipynb  LiveData.ipynb  Llmk2_Gradio.ipynb  README.md  StructuredLlama.ipynb  VideoSummary.ipynb  csv2db.py  llama_chatbot.py  llmk-on-prem.md  llmk_messenger.py  messenger_llama2.md  streamlit_llama2.py  txt2csv.py  whatsapp_llama2.md  whatsapp_llmk2.md
demo_apps/Azure_API_example/: azure_api_example.ipynb
demo_apps/RAG_Chatbot_example/: RAG_Chatbot_Example.ipynb
docs/: Dataset.md  FAQ.md  LLM_finetuning.md  inference.md  multi_gpu.md  single_gpu.md
eval/: README.md  eval.py  open_llm_eval_prep.sh
examples/: Getting_to_know_Llama.ipynb  Getting_to_know_Llmk.ipynb  Prompt_Engineering_with_Llama_2.ipynb  Purple_Llama_Anyscale.ipynb  README.md  custom_dataset.py  finetuning.py  inference.py  multi_node.slurm  plot_metrics.py  quickstart.ipynb
examples/chat_completion/: chat_completion.py
examples/code_llmk/: code_completion_example.py  code_infilling_example.py  code_instruct_example.py
examples/llmk_guard/: README.md  (+1 more)
scripts/: check_copyright_header.py  markdown_link_check_config.json  spellcheck.sh
tests/: conftest.py  test_batching.py  test_finetuning.py  test_finetuning_data_formatter.py  test_sampler.py  test_train_utils.py
(+57 files in other folders)
